Update docker-compose and GitHub Actions for multi-architecture support and thumbnail caching improvements
- Changed the image reference in docker-compose to the correct GitHub Container Registry path.
- Updated port mapping format for clarity.
- Enhanced GitHub Actions workflow to set up QEMU for multi-architecture builds and specified target platforms.
- Introduced EXIF orientation handling in thumbnail generation to ensure correct image display.
- Updated thumbnail cache filenames to include a versioning scheme for cache invalidation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 name: photog
 services:
   photog:
-    image: ghcr.io/kthor/photog:latest
+    image: ghcr.io/kthornbloom/photog:latest
     restart: unless-stopped
     ports:
       - target: 8080
