--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,27 +42,6 @@ services:
           description:
             en_US: Persistent storage for the SQLite index and generated thumbnails.
 
-  watchtower:
-    image: containrrr/watchtower:latest
-    restart: unless-stopped
-    volumes:
-      - type: bind
-        source: /var/run/docker.sock
-        target: /var/run/docker.sock
-    environment:
-      TZ: $TZ
-      WATCHTOWER_CLEANUP: "true"
-      WATCHTOWER_LABEL_ENABLE: "true"
-      WATCHTOWER_POLL_INTERVAL: "900"
-    x-casaos:
-      envs:
-        - container: WATCHTOWER_POLL_INTERVAL
-          description:
-            en_US: How often (in seconds) to check for image updates. Default is 3600 (1 hour).
-        - container: WATCHTOWER_CLEANUP
-          description:
-            en_US: Remove old images after updating. Set to "true" to save disk space.
-
 x-casaos:
   architectures:
     - amd64
@@ -92,8 +71,8 @@ x-casaos:
         On first launch, Photog indexes your library automatically. This takes 1-2 minutes
         for ~50,000 files. Thumbnails are generated on demand as you scroll.
 
-        Updates are automatic! The bundled Watchtower container checks for new images every
-        hour and seamlessly restarts Photog when an update is available.
+        For automatic updates, install Watchtower as a separate CasaOS app.
+        See DEPLOY.md for step-by-step instructions.
   scheme: http
   index: /
   port_map: "8080"
